# tutorial-cpp-conan-cmake

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py  main.cpp
animals/: CMakeLists.txt
animals/include/: Animal.hpp  Dog.hpp
animals/include/animals/: Animal.hpp  Dog.hpp
animals/src/: Animal.cpp  Dog.cpp
animals/test/: CMakeLists.txt  testAnimals.cpp
conan-profiles/: linux_x86_64
